--- a/r5.rc
+++ b/r5.rc
@@ -10,6 +10,7 @@ extern mod extra;
 pub mod stack;
 pub mod primitive;
 pub mod datum;
+pub mod bigint_helper;
 pub mod rational;
 pub mod numeric;
 pub mod parser;
