update numerical tower

--- a/r5.rc
+++ b/r5.rc
@@ -12,6 +12,7 @@ pub mod bounded_iterator;
 pub mod primitive;
 pub mod datum;
 pub mod bigint_helper;
+pub mod complex;
 pub mod rational;
 pub mod real;
 pub mod numeric;
