Rewrite from scratch!
The runtime is now implemented as a stack machine with closure support.
There is very basic functionality for now, but the skeleton of VM design
is done.

Functions and syntaxes supported are just +, lambda, and function
application.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,8 @@
 [package]
-name = "r5"
+name = "r6"
 version = "0.0.1"
-authors = ["kimhyunkang <kimhyunkang@gmail.com>"]
+authors = [ "kimhyunkang@gmail.com" ]
+
+[dependencies]
+phf = "~0.4.0"
+phf_mac = "~0.4.0"
