--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ authors = [ "kimhyunkang@gmail.com" ]
 num = "~0.1.10"
 phf = "~0.5.0"
 phf_mac = "~0.5.0"
+regex = "~0.1.10"
+regex_macros = "~0.1.5"
