--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.0.1"
 authors = [ "kimhyunkang@gmail.com" ]
 
 [dependencies]
-num = "~0.1.10"
-phf = "~0.6.1"
-phf_macros = "~0.6.1"
-regex = "0.1.21"
-regex_macros = "~0.1.5"
-log = "~0.3"
+num = "0.1"
+phf = "0.7"
+phf_macros = "0.7"
+regex = "0.1"
+regex_macros = "0.1"
+log = "0.3"
+enum_primitive = "0.1"
 
 [dev-dependencies]
-env_logger = "~0.3"
+env_logger = "0.3"
