--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ phf_macros = "0.7"
 regex = "0.1"
 log = "0.3"
 enum_primitive = "0.1"
+copperline = "0.3"
 
 [dev-dependencies]
 env_logger = "0.3"
