--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.3"
 enum_primitive = "0.1"
 copperline = "0.3"
 unicode_categories = "0.1"
+immutable-map = "0.1"
 
 [dev-dependencies]
 env_logger = "0.3"
